--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 DATABASE="mongodb://localhost/eduhub"
 SECRET_ADMIN_AUTH_KEY="abc123"
+SECRET_STUDENT_AUTH_KEY="student123"
+SECRET_TEACHER_AUTH_KEY="teacher123"
