--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "EduHub",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "aniketjha1729",
   "license": "MIT",
