--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build && npm install --prefix server && npm start --prefix server"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build"
 
   },
   "eslintConfig": {
