--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # testing
 /coverage
-
+/.vscode
 # production
 /build
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
