--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ab307e",
+        "activityBar.activeBackground": "#57ab30",
         "activityBar.activeBorder": "#25320e",
-        "activityBar.background": "#ab307e",
+        "activityBar.background": "#000000",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
         "activityBarBadge.background": "#25320e",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#832561",
+        "statusBar.background": "#000000",
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#ab307e",
         "titleBar.activeBackground": "#832561",
