--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   }
 }
